# solana-anchor-programm

./: Anchor.toml  package.json
app/: package.json
app/src/: App.js  donation.json
keys/: authority.json
migrations/: deploy.ts
programs/donation/: Cargo.toml
programs/donation/src/: lib.rs
tests/: donation.ts
